wrote the help document

--- a/PushySquares/help.html
+++ b/PushySquares/help.html
@@ -9,6 +9,27 @@
     </head>
     
     <body>
-Lorem ipsum ad qui amet dolore, vitae cetero quaerendum mel ea. Facilis fastidii duo no. Viris partiendo ius no, alia animal nam at. Feugait imperdiet ius an, no quis facer lucilius vis. Aliquam saperet contentiones ex pro, id idque offendit ius. Fugit suavitate ad eam, ut essent debitis cum. Cu duo iudico instructior. Sea te choro perfecto, per eu meis nonumy percipit. Ut mea sint constituam, cu pro impedit constituam. Et diam wisi tollit mel, te has atqui veritus. Falli volumus ullamcorper id vis, fugit debet ei pri. Mea esse saperet oporteat cu, sumo interesset an cum. Facer expetenda ius te, sint mundi aperiri no est, mollis salutandi quo ne. No dicta errem sed. Mea ei detraxit patrioque, sumo eirmod ea vix. Et dicit omittantur eam, et vix modo eius vidit. Vis et pertinacia abhorreant constituam, eum at quod vero. Ferri consectetuer sed no, ex vix nonumy posidonium quaerendum. Eum in nostro omnesque philosophia, sit veniam recteque et. Et sit facer honestatis, sonet propriae officiis ne vel, est atqui verear eruditi eu. Ut duo augue deserunt mnesarchum, an per option dignissim, cu cum convenire consulatu deterruisset. Cu vel debet ludus, docendi nominati philosophia ex his. Ad legendos expetendis duo, sed et delicata pericula torquatos. Temporibus delicatissimi eu nam, mel ea ipsum fabulas tractatos, at vim omnis clita omittantur. Ad graeco scriptorem eos. Nam ut nulla congue singulis. Ea his doctus interpretaris, at qui aliquyam complectitur. Vix hinc habeo appareat an, at modo regione tamquam sed. Vim et tritani viderer, puto evertitur nam cu. Sed odio dicunt reprimique ex, ullum noluisse instructior ei sed, ei ius nostro corrumpit. Nec mundi equidem consulatu no. Sea an prodesset intellegat, usu dicit aperiam ut. Usu cu animal meliore. Platonem theophrastus duo ea, eum no alia ludus. Assentior referrentur quo ex. Usu id causae corrumpit patrioque, ei putant nonummy nec, ne nisl laudem petentium mea. Exerci instructior cu qui. Cum probo scribentur ut. Mei pertinax suscipiantur an. Nisl pertinax ex quo, eos esse ornatus at. Usu quidam definitionem no, eu mel quem mazim pertinax. Quodsi percipit consetetur at vim, eam omnis option explicari et. Pri at liber labores, his an utinam labore aperiam. Ei eos justo omnesque reformidans. Inani detraxit voluptatum ut pro. An sit posse probatus inimicus. Magna vivendo deseruisse has at, meis modus molestiae an has. Eam iudicabit constituam mediocritatem ne.
+        <center><h1>How to Play</h1></center>
+        <ul>
+            <li>Each player decides their color.</li>
+            <li>In the beginning, each player has one square.</li>
+            <li>In each turn, the player can move their squares by swiping upwards, downwards, to the left or to the right.</li>
+            <li>New squares will be given to each player at the starting point as the game goes on.</li>
+            <li>This shows the number of moves after which a new square will appear.</li>
+        </ul>
+        <img src="new square in.png"/>
+        <ul>
+            <li>But if the starting point is occupied when a new square is due, that new square will not appear.</li>
+            <li>All squares of each player move simultaneously by each swipe.</li>
+            <li>White squares are “walls”, which block the movement of the square(s) that move(s) against them.</li>
+            <li>The goal is to push opponents’ squares off the board.</li>
+            <li>One square off the board, one life is lost.</li>
+            <li>This shows the number of remaining lives of each player.</li>
+        </ul>
+        <img src="lives.png"/>
+        <ul>
+            <li>When all lives are lost, the player is out of the game but all their remaining squares will stay and become gray, and remain moveable.</li>
+            <li>The last man standing wins.</li>
+        </ul>
     </body>
 </html>
