added help contents

--- a/PushySquares/help.html
+++ b/PushySquares/help.html
@@ -31,5 +31,14 @@
             <li>When all lives are lost, the player is out of the game but all their remaining squares will stay and become gray, and remain moveable.</li>
             <li>The last man standing wins.</li>
         </ul>
+        <center><h1>How to Have a Multi-device Game</h1></center>
+        <ul>
+            <li>One of the players taps on "HOST" on their own device.</li>
+            <li>All the detected devices around will be shown.</li>
+            <li>All other players tap on "JOIN" so they can be detected.</li>
+            <li>The player who tapped on "HOST" can then tap on the devices that they want to connect to the game.</li>
+            <li>After all the devices have been connected, the player who tapped on "HOST" taps on the start button to start the game.</li>
+            <li>The color of each player is decided automatically.</li>
+        </ul>
     </body>
 </html>
