--- a/PushySquares/help.html
+++ b/PushySquares/help.html
@@ -36,6 +36,7 @@
             <li>One of the players taps on "HOST" on their own device.</li>
             <li>All the detected devices around will be shown.</li>
             <li>All other players tap on "JOIN" so they can be detected.</li>
+            <li>Players can be detected if they are connected to the same WiFi network or their Bluetooth is turned on.</li>
             <li>The player who tapped on "HOST" can then tap on the devices that they want to connect to the game.</li>
             <li>After all the devices have been connected, the player who tapped on "HOST" taps on the start button to start the game.</li>
             <li>The color of each player is decided automatically.</li>
