--- a/PushySquares/help.html
+++ b/PushySquares/help.html
@@ -11,6 +11,8 @@
     <body>
         <center><h1>How to Play</h1></center>
         <ul>
+            
+            <li><i>The goal is to push opponents’ squares off the board.</i></li>
             <li>Each player decides their color.</li>
             <li>In the beginning, each player has one square.</li>
             <li>In each turn, the player can move their squares by swiping upwards, downwards, to the left or to the right.</li>
@@ -22,8 +24,7 @@
             <li>But if the starting point is occupied when a new square is due, that new square will not appear.</li>
             <li>All squares of each player move simultaneously by each swipe.</li>
             <li>White squares are “walls”, which block the movement of the square(s) that move(s) against them.</li>
-            <li>The goal is to push opponents’ squares off the board.</li>
-            <li>One square off the board, one life is lost.</li>
+            <li>For every square pushed off the board, the player loses one life.</li>
             <li>This shows the number of remaining lives of each player.</li>
         </ul>
         <img src="lives.png"/>
