--- a/PushySquares/help.html
+++ b/PushySquares/help.html
@@ -24,6 +24,7 @@
             <li>But if the starting point is occupied when a new square is due, that new square will not appear.</li>
             <li>All squares of each player move simultaneously by each swipe.</li>
             <li>White squares are “walls”, which block the movement of the square(s) that move(s) against them.</li>
+            <li>In some maps, there are slippery tiles. If a square moves onto a slippery tile and there is nothing blocking it, it will slip forward one more square.</li>
             <li>For every square pushed off the board, the player loses one life.</li>
             <li>This shows the number of remaining lives of each player.</li>
         </ul>
